--- a/.github/workflows/node-tests.yml
+++ b/.github/workflows/node-tests.yml
@@ -2,7 +2,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, fix/redis-lockout-production ]
   pull_request:
     branches: [ main, develop ]
 
