--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,42 @@ PORT=3001
 
 # Database Configuration
 DATABASE_URL=postgres://permisos_admin:Permisos2025!@localhost:5432/permisos_digitales_dev
+DISABLE_SSL=true
+
+# Session Secret (generate a strong random string)
+SESSION_SECRET=your_session_secret_here
+
+# Email Configuration - SMTP
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@example.com
+EMAIL_PASS=your_email_password
+EMAIL_FROM=contacto@permisosdigitales.com.mx
+
+# Application URLs
+APP_URL=http://localhost:3001
+FRONTEND_URL=http://localhost:3002
+API_URL=http://localhost:3001/api
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Conekta Payment Gateway Configuration
+CONEKTA_PUBLIC_KEY=your_conekta_public_key
+CONEKTA_PRIVATE_KEY=your_conekta_private_key
+CONEKTA_WEBHOOK_SECRET=your_conekta_webhook_secret
+
+# Security Settings
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+COOKIE_SECRET=your_cookie_secret_here
+
+# Storage Configuration
+STORAGE_TYPE=local
+# AWS S3 Configuration (only used if STORAGE_TYPE=s3)
+S3_BUCKET=your_s3_bucket
+S3_REGION=us-west-1
+S3_ACCESS_KEY_ID=your_s3_access_key
+S3_SECRET_ACCESS_KEY=your_s3_secret_key
