--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,10 @@
     "jsdom": "^26.1.0",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
+    "ts-unused-exports": "^11.0.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
+    "unimported": "^1.31.0",
     "vite": "^6.3.1",
     "vitest": "^1.6.0"
   }
