--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "lint:css": "stylelint frontend/src/**/*.css",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "eslint src/ --fix && (cd frontend && npm run lint -- --fix)",
+    "audit:code": "node scripts/code-audit.js",
+    "audit:database": "node scripts/database-cleanup-analysis.js",
+    "audit:full": "npm run audit:code && npm run audit:database",
+    "prepare:production": "bash scripts/prepare-production.sh",
+    "health:check": "node scripts/production-health-check.js",
     "prepare": "husky && husky install"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.19.1",
+    "@aws-sdk/client-s3": "^3.682.0",
+    "@aws-sdk/s3-request-presigner": "^3.682.0",
     "@dr.pogodin/csurf": "^1.15.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
     "bcrypt": "^5.1.1",
     "conekta": "^6.0.3",
     "connect-pg-simple": "^8.0.0",
@@ -49,14 +53,12 @@
     "express-rate-limit": "^6.11.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
-    "framer-motion": "^12.12.1",
     "helmet": "^6.2.0",
     "ioredis": "^5.6.1",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "node-pg-migrate": "^7.9.1",
     "nodemailer": "^6.10.1",
-    "nodemailer-mailgun-transport": "^2.1.5",
     "pg": "^8.15.6",
     "prom-client": "^14.2.0",
     "redis": "^5.1.0",
@@ -69,6 +71,7 @@
     "browser-sync": "^3.0.4",
     "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
+    "depcheck": "^1.4.7",
     "eslint": "^8.57.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
