--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ public/build/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+frontend/.env.production
 
 # IDE and editor files
 .idea/
@@ -43,3 +45,6 @@ temp/
 storage/pdfs/
 storage/payment-proofs/
 storage/payment_proofs/
+
+# docs
+docs
