Security: Update .gitignore, remove credentials from examples, add security documentation

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=3001
 
 # Database Configuration
-DATABASE_URL=postgres://permisos_admin:Permisos2025!@localhost:5432/permisos_digitales_dev
+DATABASE_URL=postgres://your_db_user:your_db_password@localhost:5432/your_database_name
 DISABLE_SSL=true
 
 # Session Secret (generate a strong random string)
