WIP: Fix TypeScript errors - reduced from 265 to 236 errors

--- a/.env.production.template
+++ b/.env.production.template
@@ -22,7 +22,7 @@ EMAIL_USER=NEW_SES_SMTP_USERNAME
 EMAIL_PASS=NEW_SES_SMTP_PASSWORD
 EMAIL_FROM=contacto@permisosdigitales.com.mx
 
-# Application URLs
+# Application URLs - CORRECTED FOR CONSISTENCY
 APP_URL=https://api.permisosdigitales.com.mx
 FRONTEND_URL=https://permisosdigitales.com.mx
 API_URL=https://api.permisosdigitales.com.mx/api
