--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@aws-sdk/client-s3": "^3.682.0",
     "@aws-sdk/s3-request-presigner": "^3.817.0",
     "@dr.pogodin/csurf": "^1.15.0",
+    "axios-cookiejar-support": "^6.0.2",
     "bcrypt": "^6.0.0",
     "conekta": "^6.0.3",
     "connect-pg-simple": "^10.0.0",
@@ -67,6 +68,7 @@
     "redis": "^5.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "tough-cookie": "^5.1.2",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
