Remove sensitive directories and files from repository
- Remove scripts/ directory containing deployment and production scripts
- Remove docs/ directory containing sensitive deployment information and private keys
- Remove database/backups/ containing SQL backup files
- Update .gitignore to prevent future commits of these directories
- Improve repository security by excluding sensitive deployment files

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,10 @@ frontend/dist-admin/
 # 🔒 PRODUCTION SECURITY - ADDITIONAL EXCLUSIONS
 # ============================================================================
 
+# Scripts directory (contains deployment and production scripts)
+scripts/
+scripts/**/*
+
 # Documentation directory (contains sensitive deployment info)
 docs/
 docs/**/*
