--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,11 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:unit": "vitest run --reporter=verbose src/**/*.test.{ts,tsx}",
+    "test:integration": "vitest run --reporter=verbose src/test/integration/**/*.test.{ts,tsx}",
+    "test:admin": "vitest run --reporter=verbose src/admin/**/*.test.{ts,tsx}",
+    "test:client": "vitest run --reporter=verbose src/{components,pages,services,hooks,utils}/**/*.test.{ts,tsx}",
+    "test:ci": "vitest run --coverage --reporter=verbose",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\" \"*.{js,json,md}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css,md}\" \"*.{js,json,md}\""
   },
