🧹 COMPREHENSIVE CLEANUP: Environment files, codebase, AWS optimization
✅ Environment Files Cleanup:
- Fixed .env.production with us-east-1 configuration
- Cleaned .env for development-only use
- Removed duplicate env files (.env.production.east, .env.production.template)
- Enhanced .gitignore for better secret protection

✅ Codebase Directory Cleanup:
- Removed empty/legacy directories (src/migrations/, src/db/old_migrations/)
- Deleted legacy database directory and tools
- Cleaned up temporary build artifacts

✅ Legal Documents Enhanced:
- Added Conekta-required cancellation policy to Terms & Conditions
- Enhanced Privacy Policy with international data transfer disclosures
- Updated both documents for legal compliance

✅ AWS Infrastructure Optimized:
- Completed us-west-1 to us-east-1 migration
- Removed all legacy AWS resources
- Achieved ~-82/month cost savings

✅ Production Ready:
- Clean, maintainable codebase structure
- Proper environment separation (dev/prod)
- Enhanced security and compliance
- Conekta integration ready for approval

--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,13 @@ dist/
 build/
 public/build/
 
-# Environment variables
+# Environment variables (CRITICAL: Never commit secrets!)
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.production
-frontend/.env.production
+.env.*
+!.env.example
+frontend/.env
+frontend/.env.*
+!frontend/.env.example
 
 # Security - Private keys and sensitive files
 *.pem
@@ -105,3 +104,16 @@ cookies.txt
 # Additional temporary files
 *.tmp
 *.bak
+
+# Cleanup and migration artifacts
+frontend-dist*/
+database_export.json
+*_test_user.js
+check_*.js
+export_data.js
+import_data.js
+cleanup_*.ps1
+*.tar.gz
+
+# Conekta testing files
+CONEKTA_TESTING_GUIDE.md
